package player

enum class ColorOfPlayer {
    BLACK, WHITE
}